--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "ni_studio_us_home",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#0175C2",
-    "theme_color": "#0175C2",
+    "background_color": "#AARRGGBB",
+    "theme_color": "#AARRGGBB",
     "description": "Static Web Apps Flutter Project to maintain the details of my Scribble Notes Application",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
